--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,6 @@
+  GNU nano 4.8                                          sec.conf                                                     
 server {
+
         location /{
                 proxy_pass http://localhost:3000;
                 proxy_http_version 1.1;
@@ -27,4 +29,3 @@ server {
         server_name i8b305.p.ssafy.io;
     return 404; # managed by Certbot
 }
-
